--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.2'
 services:
   web:
     build: .
+    container_name: "guestbookapp"
     ports:
       - "4000:4000"
     command: mix phx.server
